[RM] backdoor access by peek/poke

--- a/dut-example2-reg/sim/makefile
+++ b/dut-example2-reg/sim/makefile
@@ -8,24 +8,31 @@ TB_SRC    = ../tb/top_tb.sv
 TOP_TB    = top_tb
 
 VLOG      = vlog
+VOPT      = vopt
 VSIM      = vsim
 
-# Default: compile & run TB
-all: comp sim
+# Default: compile → optimize → simulate
+all: comp opt sim
 
-# ---------- TB ----------
+# ---------- Compile ----------
 comp:
 	@echo "Compiling DUT and TB..."
 	@if [ ! -d $(WORK) ]; then vlib $(WORK); fi
 	$(VLOG) -work $(WORK) $(DUT_SRC) $(TB_SRC)
 
+# ---------- Optimize ----------
+opt:
+	@echo "Optimizing design with +acc..."
+	$(VOPT) $(WORK).$(TOP_TB) -o $(TOP_TB)_opt +acc
+
+# ---------- Simulate ----------
 sim:
 	@echo "Running TB simulation..."
-	$(VSIM) -c -do "run -all; quit" $(WORK).$(TOP_TB) +UVM_TESTNAME=my_case0
+	$(VSIM) -c -do "run -all; quit" $(TOP_TB)_opt +UVM_TESTNAME=my_case0
 
 # ---------- Clean ----------
 clean:
 	@echo "Cleaning up..."
-	rm -rf $(WORK) transcript vsim.wlf vsim.db modelsim.ini *.log
+	rm -rf $(WORK) transcript vsim.wlf vsim.db modelsim.ini *.log $(TOP_TB)_opt
 
-.PHONY: all comp sim clean
+.PHONY: all comp opt sim clean
