--- a/dut-example2-reg/sim/makefile
+++ b/dut-example2-reg/sim/makefile
@@ -2,8 +2,8 @@
 
 # Variables
 WORK      = work
-# DUT_SRC   = ../dut/dut.sv
-DUT_SRC   = ../dut/dut2.sv
+DUT_SRC   = ../dut/dut.sv
+# DUT_SRC   = ../dut/dut2.sv
 TB_SRC    = ../tb/top_tb.sv
 TOP_TB    = top_tb
 
